--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,8 +18,8 @@ gp2= Go Page 2
 
 showM=Show Message
 
-mb1Title= Holla. Page 1 is waving
+mb1Title= Holla. Page 1 is waving!!!
 p1Message= Hello. This is Page 1
 
-mb2Title= Congratulatory Message!
+mb2Title= Welcome Message for Page 2
 p2Message= Welcome to Page 2
